--- a/client/src/Components/Popups/index.css
+++ b/client/src/Components/Popups/index.css
@@ -10,7 +10,7 @@
 }
 .document-card{
     width: 93%;
-    height: 100%;
+    height: 80%;
     border: 1px solid blue;
     border-radius: 10px;
     display: flex;
@@ -42,4 +42,44 @@
 }
 .document-upload-file-input{
     display: none;
+}
+.documents-images-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.document-image{
+    width: 100%;
+    height: 80%;
+    border-radius: 10px;
+}
+.document-image-container{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    height: 300px;
+    margin: 10px;
+}
+.verification-button-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 5px;
+    align-items: center
+}
+.verification-button{
+    width: 90px;
+    height: 28px;
+    border: none;
+    font-size: 10px;
+    border-radius: 5px;
+    margin-right: 5px;
+}
+.verified{
+    color: rgb(10, 182, 10);
+    font-size: 34px;
+    align-self: flex-end;
+    position: fixed;
 }
