--- a/client/src/Components/Header/index.css
+++ b/client/src/Components/Header/index.css
@@ -1,8 +1,24 @@
+@keyframes topInBottom {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 .nav{
   background-image: radial-gradient(rgb(42, 77, 233),  #382ef8);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    animation: topInBottom 1s ease-in-out;
   } 
 
   /* Switch */
